[project]
name = "shooting-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fpdf>=1.7.0",
    "numpy>=1.26.0",
    "opencv-python>=5.0.0.93",
    "opencv-python-headless>=4.10.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "plotly>=5.0.0",
    "scipy>=1.11.0",
    "shapely>=2.0.0",
    "streamlit>=1.36.0",
    "tqdm>=4.4.0",
    "ultralytics>=8.3.0",
]
